# fan2quizz

./: .gitignore  ANALYSIS_GUIDE.md  CACHED_TEST.md  CATEGORY_RADAR_IMPLEMENTATION.md  DOCS_CLEANUP_SUMMARY.md  FAILED_QUESTIONS_EXHAUSTIVE.md  HOW_TO_TRACK_MISTAKES.md  MIGRATION_NOTES.md  MISTAKES_GUIDE.md  MISTAKES_REPORT_14DAYS.md  MISTAKES_SUMMARY.md  PLOTS_GUIDE.md  QUICK_REFERENCE.md  RADAR_CHART_QUICKSTART.md  README.md  RESTRUCTURING_COMPLETE.md  SEABORN_ENHANCEMENTS.md  TEST_CACHE.md  TEST_WEEKLY_REPORT.md  UV_MIGRATION_SUMMARY.md  UV_SETUP.md  VISUAL_DISTINCTION_GUIDE.md  WEEKLY_MISTAKES_LAST7DAYS.md  WEEKLY_MISTAKES_REPORT.md  defi_du_jour_debug.html  defi_du_jour_results.json  main.py  player_scores_evolution.csv  pyproject.toml  requirements.txt
data/: players.json
docs/: CACHING_IMPLEMENTATION.md  CACHING_SYSTEM.md  CATEGORY_RADAR_CHART.md  COMPLETE_WORKFLOW.md  HISTORICAL_MISTAKES.md  HOW_TO_GET_OCT15_MISTAKES.md  NEW_SCRIPTS_SUMMARY.md  README.md  SHOW_MISTAKES_BY_DATE.md  STUDY_GUIDE_GENERATOR.md  WEEKLY_MISTAKES_REPORT.md  WIKIPEDIA_MISTAKES_REPORT.md
examples/: daily_report.py  fetch_all_categories.py
fan2quizz/: __init__.py  cli.py  database.py  scraper.py
notebooks/: quizz_du_jour_exploration.ipynb
scripts/: accumulate_mistakes.py  complete_workflow.py  daily_report.py  fetch_historical_mistakes.py  fetch_today_quiz.py  generate_failed_questions.py  inspect_history.py  manage_archive.py  mistakes_with_wikipedia.py  parse_results.py  player_evolution.py  plot_evolution.py  process_quiz.py  show_mistakes_by_date.py  track_mistakes.py  (+1 more)
(+8 files in other folders)
