[project]
name = "fan2quizz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "lxml>=6.0.2",
    "pandas>=2.3.3",
    "pyperclip>=1.11.0",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "sqlite-utils>=3.38",
    "tqdm>=4.67.1",
]
