[project]
name = "fan2quizz"
version = "0.2.0"
description = "Quizypedia daily quiz utilities - track leaderboards and parse results"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "lxml>=6.0.0",
    "requests>=2.30.0",
]

[project.scripts]
parse-results = "fan2quizz.cli:parse_results_main"
daily-report = "fan2quizz.cli:daily_report_main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "ruff>=0.5.0",
]

[tool.setuptools]
packages = ["fan2quizz"]

[tool.setuptools.package-data]
fan2quizz = ["py.typed"]
